<resources>
    <string name="app_name">Dasar Kode</string>
    <string name="belajar">Belajar</string>
    <string name="kuis">Kuis</string>
    <string name="user" style="text">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">PROFILE</string>
    <string name="edit">EDIT</string>
    <string name="logout">LOGOUT</string>
    <string name="email">Email: </string>
    <string name="name">Nama:</string>
    <string name="password">Password:</string>
    <string name="hobby">Hobby:</string>
    <string name="asterisks">*********</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="update">Update</string>
    <string name="fill_if_password_change">Isi jika ingin mengubah password</string>

    <string name="answer_a">A).</string>
    <string name="answer_b">B).</string>
    <string name="answer_c">C).</string>
    <string name="answer_d">D).</string>
    <string name="score">Score</string>
    <string name="finish">Finish</string>
</resources>
