<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAqua"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/processor_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_dk_home"
        tools:ignore="contentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/borderTop"
        android:layout_width="3dp"
        android:layout_height="30dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/processor_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/borderTop"
        app:layout_constraintStart_toStartOf="@id/borderTop"
        app:layout_constraintEnd_toEndOf="@id/borderTop"/>

    <View
        android:id="@+id/borderBottom"
        android:layout_width="3dp"
        android:layout_height="30dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/textViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAegeanBlue"
        app:layout_constraintTop_toBottomOf="@id/borderBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/secondBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/borderRound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/label_round"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@id/buttonUpdate"
        app:layout_constraintTop_toTopOf="@id/secondBackground"
        app:layout_constraintStart_toStartOf="@id/secondBackground"
        app:layout_constraintEnd_toEndOf="@id/secondBackground"/>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/rounded_corners_aqua"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/borderRound"/>

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/email"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/textViewNameLabel"
        app:layout_constraintTop_toTopOf="@id/borderRound"
        app:layout_constraintStart_toStartOf="@id/borderRound"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="acep@gmail.com"
        android:lines="1"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/textViewPasswordLabel"
        app:layout_constraintTop_toTopOf="@id/textViewEmailLabel"
        app:layout_constraintBottom_toBottomOf="@id/textViewEmailLabel"
        app:layout_constraintEnd_toEndOf="@id/borderRound"/>

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/name"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/textViewPasswordLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailLabel"
        app:layout_constraintStart_toStartOf="@id/borderRound"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="Acep"
        android:lines="1"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/textViewPasswordLabel"
        app:layout_constraintTop_toTopOf="@id/textViewNameLabel"
        app:layout_constraintBottom_toBottomOf="@id/textViewNameLabel"
        app:layout_constraintEnd_toEndOf="@id/borderRound"/>

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/password"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/textViewHobbyLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewNameLabel"
        app:layout_constraintStart_toStartOf="@id/borderRound"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/asterisks"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:inputType="textPassword"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/textViewPasswordLabel"
        app:layout_constraintTop_toTopOf="@id/textViewPasswordLabel"
        app:layout_constraintBottom_toBottomOf="@id/textViewPasswordLabel"
        app:layout_constraintEnd_toEndOf="@id/borderRound"/>

    <TextView
        android:id="@+id/textViewHobbyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/hobby"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/borderRound"
        app:layout_constraintTop_toBottomOf="@id/textViewPasswordLabel"
        app:layout_constraintStart_toStartOf="@id/borderRound"/>

    <EditText
        android:id="@+id/editTextHobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="Acep"
        android:lines="1"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/textViewPasswordLabel"
        app:layout_constraintTop_toTopOf="@id/textViewHobbyLabel"
        app:layout_constraintBottom_toBottomOf="@id/textViewHobbyLabel"
        app:layout_constraintEnd_toEndOf="@id/borderRound"/>

</androidx.constraintlayout.widget.ConstraintLayout>
